:bug: fixed input animation bug on firefox and safari

--- a/src/textInput/theme.scss
+++ b/src/textInput/theme.scss
@@ -8,7 +8,7 @@
 }
 
 :local(.inputElement) {
-  padding-bottom: 6px;
+  padding: 0 0 6px 0;
   background-color: var(--input-text-background-color);
   border-bottom: 2px solid $original-black;
   border-left: 0;
